--- a/src/static/available-rooms.html
+++ b/src/static/available-rooms.html
@@ -6,7 +6,102 @@
     <div class="available-rooms-filter">
         <span class="available-rooms-filter-title">Показывать:</span>
         <div class="available-rooms-filter-elements">
-
+            <div class="input1">
+                <span class="text">Все</span>
+            </div>
+            <div class="input2">
+                <span class="text">С бесплатной отменой</span>
+            </div>
+            <div class="input3">
+                <span class="text">Любой тип оплаты</span>
+                <svg class="select-arrow-down" width="16" height="16" viewBox="0 0 16 16" fill="none"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path d="M8 10L4 6L12 6L8 10Z" fill="#267FF9"/>
+                </svg>
+            </div>
+            <div class="input4">
+                <span class="text">Любой тип питания</span>
+                <svg class="select-arrow-down" width="16" height="16" viewBox="0 0 16 16" fill="none"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path d="M8 10L4 6L12 6L8 10Z" fill="#267FF9"/>
+                </svg>
+            </div>
+        </div>
+    </div>
+    <div class="available-rooms-results-block">
+        <div class="available-rooms-result">
+            <div class="available-rooms-result-decor"></div>
+            <span class="room-title">«Люкс» с видом на море</span>
+            <div class="frame-154">
+                <div class="frame-132">
+                    <div class="frame-127">
+                        <div class="man-icon"></div>
+                        <div class="man-icon"></div>
+                    </div>
+                </div>
+                <div class="frame-133">
+                    <div class="frame-127">
+                        <div class="man-icon"></div>
+                        <div class="man-icon"></div>
+                        <div class="plus-icon"></div>
+                        <div class="child-icon"></div>
+                        <div class="child-icon"></div>
+                    </div>
+                </div>
+            </div>
+            <span class="room-description">
+                Номер категории «Семейный номер с видом на море» — Номер предназначен для проживания 3 гостей (2 на основных местах + 1 на дополнительном месте).
+            </span>
+            <span class="line1"></span>
+            <div class="frame-155">
+                <div class="frame-155-overflow">
+                    <div class="nice-look-img">
+                        <span class="caption">Красивый вид</span>
+                    </div>
+                    <div class="kitchen-img">
+                        <span class="caption">Кухня</span>
+                    </div>
+                    <div class="refrigerator-img">
+                        <span class="caption">Холодильник</span>
+                    </div>
+                    <div class="wifi-img">
+                        <span class="caption">Wi-Fi</span>
+                    </div>
+                    <div class="no-smoking-room">
+                        <span class="caption">Номер для некурящих</span>
+                    </div>
+                </div>
+                <div class="gradient"></div>
+                <div class="frame-78">
+                    <span class="caption">Подробнее о номере</span>
+                </div>
+            </div>
+        </div>
+        <div class="available-rooms-result">
+            <div class="available-rooms-result-decor"></div>
+            <span class="room-title">Семейный номер «Люкс» с видом на море</span>
+            <div class="frame-154">
+                <div class="frame-132">
+                    <div class="frame-127">
+                        <div class="man-icon"></div>
+                        <div class="man-icon"></div>
+                    </div>
+                </div>
+                <div class="frame-133">
+                    <div class="frame-127">
+                        <div class="man-icon"></div>
+                        <div class="man-icon"></div>
+                        <div class="plus-icon"></div>
+                        <div class="child-icon"></div>
+                        <div class="child-icon"></div>
+                    </div>
+                </div>
+            </div>
+            <span class="room-description">
+                Номер категории «Семейный номер с видом на море» — Номер предназначен для проживания 3 гостей (2 на основных местах + 1 на дополнительном месте).
+            </span>
+            <span class="line1"></span>
         </div>
     </div>
 </div>
+
