--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preload" href="fonts/Inter.ttf" as="font">
     <meta charset="UTF-8">
     <title>OTEL</title>
 </head>
