--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>OTEL</title>
 </head>
@@ -59,6 +60,20 @@
 </div>
 <div class="rectangle-2">
     <div class="main-info">
+        <div class="image">
+            <svg width="256" height="113" viewBox="0 0 256 113" fill="none" xmlns="http://www.w3.org/2000/svg"
+                 xmlns:xlink="http://www.w3.org/1999/xlink">
+                <path d="M0 0H256V113H0V0Z" fill="url(#pattern0)"/>
+                <defs>
+                    <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
+                        <use xlink:href="#image0"
+                             transform="translate(0 -0.0140912) scale(0.000769231 0.00174268)"/>
+                    </pattern>
+                    <image id="image0" width="1300" height="590"
+                           xlink:href="static/logo.png"/>
+                </defs>
+            </svg>
+        </div>
         <div class="title">
             Парк-отель "Зеленый мыс"
         </div>
@@ -95,20 +110,7 @@
                 <a href="mailto:reservations@hotelzm.com" class="text">reservations@hotelzm.com</a>
             </div>
         </div>
-        <div class="image">
-            <svg width="256" height="113" viewBox="0 0 256 113" fill="none" xmlns="http://www.w3.org/2000/svg"
-                 xmlns:xlink="http://www.w3.org/1999/xlink">
-                <path d="M0 0H256V113H0V0Z" fill="url(#pattern0)"/>
-                <defs>
-                    <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
-                        <use xlink:href="#image0"
-                             transform="translate(0 -0.0140912) scale(0.000769231 0.00174268)"/>
-                    </pattern>
-                    <image id="image0" width="1300" height="590"
-                           xlink:href="static/logo.png"/>
-                </defs>
-            </svg>
-        </div>
+
     </div>
     <div class="photos">
         <img src="static/photo1.png" alt="">
