--- a/src/index.html
+++ b/src/index.html
@@ -189,5 +189,18 @@
     <div class="close-btn"></div>
     <div class="tooltip-value"></div>
 </div>
+<div class="desktop-only image-wiev-block">
+    <div class="close-btn"></div>
+    <img class="desktop-only photo-view" alt="" src="">
+    <div class="prev-btn-block">
+        <img src="static/prev-image-btn.svg" alt="" class="prev-image">
+    </div>
+    <div class="next-btn-block">
+        <img src="static/prev-image-btn.svg" alt="" class="next-image">
+    </div>
+    <div class="images-counter">
+        <div class="image-counter-value">0/0</div>
+    </div>
+</div>
 </body>
 </html>
